--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "leandre_b",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "express": "^4.16.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -20,7 +23,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "styled-components": "^3.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
